app/styles/layout/_content.scss
.ui-content {
  flex: 1 1 100%;
  background: #F5F5F5;
  position: relative;
  overflow: auto;
  padding: $header-height-sm 0 0;
  z-index: 1;

  @media screen and (min-width: map-get($screens, sm)) {
    padding: 0 0 0 $header-height-md;
  }

  .post {
    height: 50%;

    @media screen and (min-width: map-get($screens, lg)) {
      flex: 1 0 50%;
      height: 100%;
    }

    &__date,
    &__title,
    p {
      color: map-get($colors, white);
    }

    .button--rarrow {
      background-image: url('../images/arrow-right-white.png');
    }
  }

  .post__excerpt {
    animation: content-excerpt-enter 0.5s ease-in-out 0.3s both;

    @keyframes content-excerpt-enter {
      0% {
        transform: translateY(-0.5em);
        opacity: 0;
      }
    }
  }
}

.ui-detail {
  flex: 1 1 auto;
  overflow: auto;
  padding: ($header-height-sm + 3.5rem) 2.5em 1em;

  @media screen and (min-width: map-get($screens, sm)) {
    animation:
      ui-detail-opacity 0.6s ease-in-out both,
      ui-detail-translate 1s cubic-bezier(0.28, 0.52, 0.42, 0.94) both;
  }

  @keyframes ui-detail-opacity {
    0% { opacity: 0; }
  }

  @keyframes ui-detail-translate {
    0% { transform: translate(1em, 0); }
  }

  @media screen and (min-width: map-get($screens, sm)) {
    font-size: 1.1em;
    padding: 0;
  }

  @media screen and (min-width: map-get($screens, sm)) {
    &.detail {
      &--vast-the-crystal-caverns {
        background:
          url('../images/posts/vast/portrait-wide.jpg') 44.5rem 50% / auto 100% no-repeat;
      }

      &--hello-world {
        background:
          url('../images/posts/helloworld/portrait-wide.jpg') 52rem 50% / auto 100% no-repeat;
      }
    }
  }

  .detail__post {
    flex: 1 1 auto;
    height: 100%;
    overflow: auto;

    @media screen and (min-width: map-get($screens, sm)) {
      max-width: 84.5rem;
      background-color: #f8f9fa;
      padding: 7em 7em 4em ($header-height-md + 7rem);
    }

    @media screen and (min-width: map-get($screens, lg)) {
      max-width: 100.0rem;
    }
  }

  &.prev-black {
    @media screen and (max-width: map-get($screens, sm)) {
      animation: detail-enter 0.4s ease-in-out both;
    }

    @keyframes detail-enter {
      0% { background-color: #545663; }
    }

    .post__date {
      animation: post-date-enter 0.4s ease-in-out both;

      @keyframes post-date-enter {
        0% { color: #545663; }
      }
    }

    .post__title {
      animation: post-title-enter 0.4s ease-in-out both;

      @keyframes post-title-enter {
        0% { color: #545663; }
      }
    }
  }

  .post__detail {
    @media screen and (max-width: map-get($screens, sm)) {
      animation:
        post-detail-opacity 0.5s cubic-bezier(0.28, 0.52, 0.42, 0.94) 0.3s both,
        post-detail-translate 0.8s cubic-bezier(0.28, 0.52, 0.42, 0.94) 0.3s both;
    }

    @keyframes post-detail-opacity {
      0% { opacity: 0; }
    }

    @keyframes post-detail-translate {
      0% { transform: translate(0, 1em); }
    }

    h2 {
      font: 700 2.4em / 1.2 $font-display;
      color: map-get($colors, darkgray);
      text-transform: uppercase;
      margin: 1.2em auto 0.3em;
    }
  }

  .tns-outer {
    margin: 2em auto 3em;
    position: relative;

    button[data-controls="prev"],
    button[data-controls="next"] {
      text-indent: -9999px;
      width: 3.3rem;
      height: 3.3rem;
      background: red;
      border: none;
      transform: translate(0, -50%);
      position: absolute;
      top: 50%;
      z-index: 2;

      &:hover,
      &:focus {
        outline: none;
      }
    }

    button[data-controls="prev"] {
      background: url('../images/arrow-right-white-sw.png') 50% 50% / auto 80% no-repeat;
      transform: translate(0, -50%) rotateZ(-180deg);
      left: 1em;
    }

    button[data-controls="next"] {
      background: url('../images/arrow-right-white-sw.png') 50% 50% / auto 80% no-repeat;
      right: 1em;
    }
  }
}

